<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stock"
            type="com.yash10019coder.upstox.databinding.StockListingItemModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stockName"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@{@string/share_name(stock.symbol)}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/default_share_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stockPrice"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@{@string/share_last_traded_price(stock.lastTradedPrice)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/default_share_last_traded_price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stockQuantity"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@{@string/share_quantity(stock.quantity)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stockName"
            tools:text="@string/default_share_quantity" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stockProfitLoss"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@{@string/share_profit_loss_amount(stock.profitAndLoss)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stockPrice"
            tools:text="@string/default_profit_loss_amount" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:dividerInsetEnd="10dp"
            app:dividerInsetStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/stockQuantity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
